# ferrugem-lang

./: Cargo.toml  Makefile  README.md
examples/: def_functions.lcc  feira.lcc  imc.lcc  lexical_error.lcc  matriz.lcc  simple.lcc  simple_statement.lcc  syntax_error.lcc
src/: ast.rs  calculator1.lalrpop  codegen.rs  grammar.lalrpop  lexer.rs  main.rs  parser.rs  semantic.rs
