[package]
name = "ferrugem-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
structopt = "0.3"
codespan-reporting = "0.11.1"
lalrpop-util = "0.19.6"

[build-dependencies]
lalrpop = "0.19.6"
